--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: kyria_rev3_left
+    shield: breletyl_left
   - board: nice_nano_v2
-    shield: kyria_rev3_right
+    shield: breletyl_right
