--- a/config/boards/shields/breletyl/breletyl.dtsi
+++ b/config/boards/shields/breletyl/breletyl.dtsi
@@ -1,7 +1,11 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 
 / {
-
+    
+    chosen {
+        zmk,kscan = &kscan0;
+        zmk,matrix_transform = &default_transform;
+    };
 
     kscan0: kscan0 {
         compatible = "zmk,kscan-gpio-matrix";
@@ -32,4 +36,9 @@
                               RC(3,2)  RC(3,3)  RC(3,4)     RC(3,5)  RC(3,6)  RC(3,7)
         >;
     };
+};
+
+
+
+/ {
 };
