Adding mouse emulation into config file

--- a/config/boards/shields/breletyl/breletyl.conf
+++ b/config/boards/shields/breletyl/breletyl.conf
@@ -8,4 +8,4 @@ CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_ZMK_KEYBOARD_NAME="ZMK Breletyl"
 
 # Enable mouse emulation.
-CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_POINTING=y
