Trying ChatGPT fix - adding queue size to 512

--- a/config/boards/shields/breletyl/breletyl.conf
+++ b/config/boards/shields/breletyl/breletyl.conf
@@ -7,5 +7,8 @@ CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 # Enable mouse emulation.
 CONFIG_ZMK_POINTING=y
 
+# Enable longer macros.
+CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
+
 # Edit keyboard name.
 CONFIG_ZMK_KEYBOARD_NAME="ZMK Breletyl"
