--- a/config/boards/shields/breletyl/breletyl.conf
+++ b/config/boards/shields/breletyl/breletyl.conf
@@ -4,11 +4,14 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Enable N-Key rollover.
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 
-# Enable mouse emulation.
-CONFIG_ZMK_POINTING=y
+# Edit keyboard name.
+CONFIG_ZMK_KEYBOARD_NAME="Breletyl"
 
 # Enable longer macros.
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
 
-# Edit keyboard name.
-CONFIG_ZMK_KEYBOARD_NAME="ZMK Breletyl"
+# Enable mouse emulation.
+CONFIG_ZMK_POINTING=y
+
+# Percentage battery status
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
